# pratidhwani

./: .gitignore  LICENSE  README.md  SPEC.md  user.md
.playwright-mcp/: page-2026-05-03T14-04-37-134Z.yml  page-2026-05-03T14-07-06-768Z.yml  page-2026-05-03T14-08-06-210Z.yml  page-2026-05-03T14-08-14-855Z.yml
api/: .dockerignore  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements.txt
api/app/: __init__.py  baseline.py  config.py  db.py  forecaster.py  log_config.json  logging_setup.py  main.py  prewarmer.py  regions_repo.py  router.py  schemas.py  scorer.py  sim.py
api/tests/: conftest.py  docker-compose.yml  test_baseline.py  test_forecaster.py  test_integration.py  test_router_unit.py  test_scorer.py
db/: Dockerfile  README.md  deploy.sh  entrypoint.sh
db/pb_migrations/: 1700000000_init.js
db/pb_seed/: regions.json
deploy/: orchestrate.sh  smoke.sh
docs/: literature.md  report-template.md
scripts/: generate_report_docx.py
web/: .dockerignore  Dockerfile  README.md  deploy.sh  entrypoint.sh  index.html  nginx.conf.template  package-lock.json  package.json  tailwind.config.ts  vite.config.js  vite.config.ts
web/public/: Pratidhwani-Capstone-Report.docx
web/src/: App.tsx  main.tsx  vite-env.d.ts
web/src/components/: ApiBadge.tsx  DecisionFeed.tsx  EmptyState.tsx  Layout.tsx  Logo.tsx  MetricTile.tsx  RegionCard.tsx  SectionHeader.tsx  ThemeToggle.tsx  TrafficSpark.tsx  WeightSliders.tsx
web/src/hooks/: useDebouncedCallback.ts  useKeyboard.ts  useTheme.ts  useTick.ts
web/src/lib/: api.ts  format.ts  types.ts
(+9 files in other folders)
