[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pratidhwani-api"
version = "0.1.0"
description = "Pratidhwani gateway: predictive carbon-aware FaaS routing."
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.setuptools.packages.find]
include = ["app*"]
